Implementing barber module
