# backend/docs/swagger.json
@@ -34,7 +34,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.AdminPagOutput"
+                            "$ref": "#/definitions/admin.PagOutput"
                         }
                     }
                 }
@@ -58,7 +58,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/admin.AdminInput"
+                            "$ref": "#/definitions/admin.Input"
                         }
                     }
                 ],
@@ -66,7 +66,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/admin.AdminOutput"
+                            "$ref": "#/definitions/admin.Output"
                         }
                     }
                 }
@@ -98,7 +98,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.AdminOutput"
+                            "$ref": "#/definitions/admin.Output"
                         }
                     }
                 }
@@ -129,7 +129,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/admin.AdminUpdateInput"
+                            "$ref": "#/definitions/admin.UpdateInput"
                         }
                     }
                 ],
@@ -137,7 +137,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/admin.AdminOutput"
+                            "$ref": "#/definitions/admin.Output"
                         }
                     }
                 }
@@ -203,10 +203,254 @@
                     }
                 }
             }
+        },
+        "/barber": {
+            "get": {
+                "description": "List all barbers",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "barber"
+                ],
+                "summary": "List barbers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "full or partial barber name",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/barber.PagOutput"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Add a new barber",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "barber"
+                ],
+                "summary": "Add barber",
+                "parameters": [
+                    {
+                        "description": "Barber input",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/barber.Input"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/barber.Output"
+                        }
+                    }
+                }
+            }
+        },
+        "/barber/{id}": {
+            "get": {
+                "description": "Get barber by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "barber"
+                ],
+                "summary": "Get barber",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Barber ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/barber.Output"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update barber by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "barber"
+                ],
+                "summary": "Update barber",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Barber ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Barber update input",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/barber.Input"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/barber.Output"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete barber by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "barber"
+                ],
+                "summary": "Delete barber",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Barber ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/barber/{id}/checkin": {
+            "get": {
+                "description": "Get check-ins for a barber",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "barber"
+                ],
+                "summary": "Get check-ins",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Barber ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Initial date",
+                        "name": "initial_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Final date",
+                        "name": "final_date",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/barber.PagCheckinOutput"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Add a check-in for a barber",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "barber"
+                ],
+                "summary": "Add check-in",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Barber ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Check-in input",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/barber.CheckinInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/barber.CheckinOutput"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "admin.AdminInput": {
+        "admin.Input": {
             "type": "object",
             "required": [
                 "password",
@@ -221,7 +465,7 @@
                 }
             }
         },
-        "admin.AdminOutput": {
+        "admin.Output": {
             "type": "object",
             "properties": {
                 "id": {
@@ -232,7 +476,7 @@
                 }
             }
         },
-        "admin.AdminPagOutput": {
+        "admin.PagOutput": {
             "type": "object",
             "properties": {
                 "count": {
@@ -241,7 +485,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/admin.AdminOutput"
+                        "$ref": "#/definitions/admin.Output"
                     }
                 },
                 "next": {
@@ -249,7 +493,7 @@
                 }
             }
         },
-        "admin.AdminUpdateInput": {
+        "admin.UpdateInput": {
             "type": "object",
             "required": [
                 "password"
@@ -280,6 +524,103 @@
             "properties": {
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "barber.CheckinInput": {
+            "type": "object",
+            "required": [
+                "date_time"
+            ],
+            "properties": {
+                "barberID": {
+                    "type": "integer"
+                },
+                "date_time": {
+                    "type": "string"
+                }
+            }
+        },
+        "barber.CheckinOutput": {
+            "type": "object",
+            "properties": {
+                "barber_id": {
+                    "type": "integer"
+                },
+                "date_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "barber.Input": {
+            "type": "object",
+            "required": [
+                "name",
+                "photo_url"
+            ],
+            "properties": {
+                "commission_rate": {
+                    "type": "number"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "photo_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "barber.Output": {
+            "type": "object",
+            "properties": {
+                "commission_rate": {
+                    "type": "number"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "photo_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "barber.PagCheckinOutput": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/barber.CheckinOutput"
+                    }
+                },
+                "next": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "barber.PagOutput": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/barber.Output"
+                    }
+                },
+                "next": {
+                    "type": "boolean"
                 }
             }
         }
